--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/bootstrap-theme.scss public/css/bootstrap/bootstrap-theme.css",
     "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output public/css/bootstrap/bootstrap-theme.min.css public/css/bootstrap/bootstrap-theme.css",
     "css": "npm-run-all --sequential css-*",
+    "gh-pages": "gh-pages -d public",
     "templates": "pug --pretty -o public/ src/",
     "build": "npm-run-all --sequential clean copy-* templates css",
+    "deploy": "npm-run-all --sequential build gh-pages",
     "watch": "npm-run-all build --parallel watch-templates watch-css browsersync",
     "watch-templates": "npm run templates -- --watch",
     "watch-css": "npm run css-compile -- --watch"
@@ -30,6 +32,7 @@
     "browser-sync": "^2.24.7",
     "clean-css-cli": "^4.2.1",
     "cpx": "^1.5.0",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.3",
     "pug": "^2.0.3",
